<resources>
    <string name="app_name">GeoChat</string>

    <string name="login">Логин:</string>
    <string name="enter_login">Введите логин</string>

    <string name="password">Пароль:</string>
    <string name="enter_password">Введите пароль</string>
    
    <string name="title">Название:</string>
    <string name="description">Описание:</string>
    <string name="destination">Расстояние:</string>

    <string name="enter">Войти</string>
    <string name="send">Отправить</string>
    <string name="creat">Создать</string>

    <string name="error_password">Пароль слишком короткий</string>
    
    <string name="colon">:</string>
</resources>
